--- a/styles.css
+++ b/styles.css
@@ -296,7 +296,7 @@ section {
   left: 10px;
   right: 10px;
   bottom: 10px;
-  background: url("imgs/mine.jpg") center/cover;
+  background: url("assets/imgs/mine.jpg") center/cover;
   border-radius: calc(var(--border-radius) - 10px);
 }
 
@@ -392,7 +392,7 @@ section {
   left: 10px;
   right: 10px;
   bottom: 10px;
-  background: url("Imgs/About.png") center/cover;
+  background: url("assets/imgs/About.png") center/cover;
   border-radius: calc(var(--border-radius) - 10px);
 }
 
@@ -977,3 +977,4 @@ textarea.form-control {
   50% { border-color: #35ffff; }
   100% { border-color: transparent; }
 }
+
